crates/toml/tests/snapshots/invalid/ext/table/append-with-dotted-keys-7.stderr
TOML parse error at line 5, column 4
  |
5 | [_.s]
  |    ^
duplicate key
